--- a/W3 excercises/index16.html
+++ b/W3 excercises/index16.html
@@ -57,6 +57,35 @@
       }
     }
 
+    // Write a JavaScript program to create a new string from a given string
+    // changing the position of first and last characters. The string length
+    // must be greater than or equal to 1.
+    console.log('----------------');
+
+    builder('Maciej');
+    builder('');
+
+    function builder(text){
+
+      if (text.length <= 1){
+        console.log('String to short');
+        return text;
+      }
+
+      var textLength = text.length;
+      var firstLetter = text.substring(0, 1);
+      var middlePart = text.substring(1, textLength - 1);
+      var lastLetter = text.substring(textLength - 1, textLength);
+
+      console.log('text length:', textLength);
+      console.log('firstLetter', firstLetter);
+      console.log('middle part', middlePart);
+      console.log('last letter', lastLetter);
+
+      var combine = lastLetter + middlePart + firstLetter;
+      console.log(combine);
+    }
+
     </script>
 
   </body>
