--- a/W3 excercises/index16.html
+++ b/W3 excercises/index16.html
@@ -140,9 +140,39 @@
       return textPartial + text + textPartial;
     }
 
+    console.log('----------------');
+    //Write a JavaScript program to check if a string starts with 'Java' and false otherwise
+    console.log(javaChecker('JavaScript'));
+    console.log(javaChecker('C++'));
+    console.log(javaChecker('Java'));
+
+    function javaChecker(text){
+      if (text.substring(0, 4) === 'Java'){
+        return true;
+      } else {
+        return false;
+      }
+    }
+
+    console.log('----------------');
+    //Write a JavaScript program to check if two given integer values are
+    //in the range 50..99 (inclusive). Return true if either of them are
+    //in the said range.
+
+    console.log(withinRange(50, 100));
+    console.log(withinRange(40, 90));
+    console.log(withinRange(50, 90));
+    console.log(withinRange(40, 100));
+
+    function withinRange(val1, val2){
+      if ((val1 >= 50 && val1 <= 99) || (val2 >= 50 && val2 <= 99)) {
+        return true;
+      } else {
+        return false;
+      }
+    }
 
 
     </script>
-
   </body>
 </html>
