--- a/W3 excercises/index17.html
+++ b/W3 excercises/index17.html
@@ -42,6 +42,16 @@
       }
     }
 
+    console.log('----------------');
+    //Write a JavaScript program to find the largest of three given integers.
+    console.log(highestOne(12, 4, 6));
+    console.log(highestOne(2, 4, 6));
+
+    function highestOne(val1, val2, val3){
+      return Math.max(val1, val2, val3);
+    }
+
+
     </script>
   </body>
 </html>
