--- a/W3 excercises/index17.html
+++ b/W3 excercises/index17.html
@@ -51,6 +51,30 @@
       return Math.max(val1, val2, val3);
     }
 
+    console.log('----------------');
+    //Write a JavaScript program to find a value which is nearest to 100 from two different given integer values.
+
+
+    console.log(howClose(99, 120));
+    console.log(howClose(-99, 102));
+
+
+    function howClose(val1, val2){
+      var compare1 = Math.abs(val1 - 100);
+      //console.log(compare1);
+      var compare2 = Math.abs(val2 - 100);
+      //console.log(compare2);
+
+      if (compare1 < compare2){
+        return val1;
+      } else if (compare2 < compare1){
+        return val2;
+      }
+    }
+
+
+    console.log('-------------------')
+
 
     </script>
   </body>
