--- a/W3 excercises/index18.html
+++ b/W3 excercises/index18.html
@@ -29,7 +29,28 @@
       }
 
       console.log('-------------------');
-      
+      //38. Write a JavaScript program to check the total marks of a student in
+      //various examinations. The student will get A+ grade if the total marks are
+      // in the range 89..100 inclusive, if the examination is "Final-exam."
+      //the student will get A+ grade and total marks must be greater than or equal
+      //to 90. Return true if the student get A+ grade or false otherwise.
+
+      console.log(gradeCounter("Final-exam", 95));
+      console.log(gradeCounter("Final-exam", 89));
+      console.log(gradeCounter("exam", 92));
+      console.log(gradeCounter("exam", 88));
+
+      function gradeCounter(exam, mark){
+        if (exam === "Final-exam" && (mark >= 90 && mark <= 100)) {
+          return ["A+", true];
+        } else if (exam === "exam" && (mark >= 89 && mark <= 100)) {
+          return ["A+", true];
+        } else {
+          return false;
+        }
+      }
+
+
     </script>
   </body>
 </html>
