--- a/W3 excercises/index18.html
+++ b/W3 excercises/index18.html
@@ -50,6 +50,24 @@
         }
       }
 
+      console.log('-------------------');
+      //39. Write a JavaScript program to compute the sum of the two given
+      //integers, If the sum is in the range 50..80 return 65 other wise return 80.
+
+      console.log(isInRange(55, 8));
+      console.log(isInRange(55, 55));
+      console.log(isInRange(45, 1));
+
+      function isInRange(val1, val2) {
+        if((val1 + val2 >= 50) && (val1 + val2 <= 80)){
+          return 65;
+        } else {
+          return 80;
+        }
+      }
+
+      console.log('-------------------');
+      
 
     </script>
   </body>
