--- a/W3 excercises/index18.html
+++ b/W3 excercises/index18.html
@@ -148,6 +148,44 @@
         }
       }
 
+      console.log('-------------------');
+      //Write a JavaScript program to check from three given numbers
+      //(non negative integers) that two or all of them have the same rightmost digit.
+
+      rightMost(34, 54, 64);
+      rightMost(34, 55, 64);
+      rightMost(33, 54, 65);
+
+      function rightMost(dig1, dig2, dig3){
+        if ((dig1 >= 0 && dig2 >= 0 && dig3 >= 0)){
+          var dig1S = dig1.toString();
+          var dig2S = dig2.toString();
+          var dig3S = dig3.toString();
+
+          var dig1L = dig1S.length;
+          var dig2L = dig2S.length;
+          var dig3L = dig3S.length;
+
+          var lastDig1 = dig1S.slice(dig1L - 1, dig1L);
+          var lastDig2 = dig2S.slice(dig2L - 1, dig2L);
+          var lastDig3 = dig3S.slice(dig3L - 1, dig3L);
+
+          console.log(`Last digit of ${dig1} is ${lastDig1}`);
+          console.log(`Last digit of ${dig2} is ${lastDig2}`);
+          console.log(`Last digit of ${dig3} is ${lastDig3}`);
+
+          if(lastDig1 === lastDig2 && lastDig2 === lastDig3){
+            return console.log('3 values has same rightmost digit');
+          } else if (lastDig1 === lastDig2 || lastDig1 === lastDig3 || lastDig2 === lastDig3) {
+            return console.log('2 values has same rightmost digit');
+          } else {
+            return console.log('there are no same rightmost digits');
+          }
+
+        } else {
+          return console.log(`Value1(${dig1}) or Value2(${dig2}) or Value3(${dig3}) is lower than 0`);
+        }
+      }
 
 
     </script>
