--- a/W3 excercises/index19.html
+++ b/W3 excercises/index19.html
@@ -68,6 +68,24 @@
         }
       }
 
+      //47. Write a JavaScript program to check if a number in the range 40..10000
+      //inclusive presents in two number (in same range).
+      //For example 40 presents in 400 and 4000
+
+      function test_digit(x, y) {
+        let x_div = parseInt(x / 40),
+            x_mod = x % 40,
+            y_div = parseInt(y / 40),
+            y_mod = y % 40;
+            return x_div === y_div || x_mod === y_mod ||
+              x_div === y_mod || x_mod === y_div;
+      }
+
+      console.log('-------------------');
+      console.log(test_digit(40, 4000));
+      console.log(test_digit(80, 320));
+      console.log(test_digit(89, 4000));
+
     </script>
   </body>
 </html>
