--- a/W3 excercises/index19.html
+++ b/W3 excercises/index19.html
@@ -87,8 +87,8 @@
               x_div === y_mod || x_mod === y_div;
       }
 
-      //48. Write a JavaScript program to reverse a given string.
       console.log('-------------------');
+      //48. Write a JavaScript program to reverse a given string.
 
       console.log(reverseString('Hello'));
       console.log(reverseString('Maciej'));
@@ -97,7 +97,23 @@
         return str.split("").reverse().join("");
       }
 
+      console.log('-------------------');
+      //49. Write a JavaScript program to replace every character in a given
+      //string with the character following it in the alphabet.
 
+      function replaceLetter(str){
+        var alpha = "abcdefghijklmnopqrstuvwxyz";
+        var new_str = "";
+
+        for (var i = 0; i < str.length; i++){
+          var aindex = alpha.indexOf(str[i]);
+          if (aindex === 25){
+            new_str = new_str + "a";
+          } else if (aindex === -1) {
+            new_str = new_str + str[i];
+          }
+        }
+      }
     </script>
   </body>
 </html>
