finished intermediate HTML unit

--- a/W3 excercises/index20.html
+++ b/W3 excercises/index20.html
@@ -38,6 +38,7 @@
       }
     }
 
+    console.log("------------------------------");
     //56. Write a JavaScript program to divide two positive numbers and return a string with properly formatted commas.
     function division_string(n1, n2) {
       if (n1<=0 || n2<=0) return false;
@@ -51,6 +52,15 @@
         }
       }
     }
+
+    console.log("------------------------------");
+    //57. Write a JavaScript program to create a new string of specified copies (positive number) of a given string.
+    //58. Write a JavaScript program to create a new string of 4 copies of the last 3 characters of a given original string. The length of the given string must be 3 and above.
+    //59. Write a JavaScript program to extract the first half of a string of even length.
+    //60. Write a JavaScript program to create a new string without the first and last character of a given string.
+    //61. Write a JavaScript program to concatenate two strings except their first character. 
+
+
     </script>
   </body>
 </html>
