JS excercise 57 & tic tac toe boilerplate

--- a/W3 excercises/index20.html
+++ b/W3 excercises/index20.html
@@ -55,10 +55,22 @@
 
     console.log("------------------------------");
     //57. Write a JavaScript program to create a new string of specified copies (positive number) of a given string.
+
+    console.log(provideCopy("some text", 3));
+
+    function provideCopy(text, n){
+      if(n < 0){
+        return false;
+      } else {
+        return text.repeat(n);
+      }
+    }
+
+
     //58. Write a JavaScript program to create a new string of 4 copies of the last 3 characters of a given original string. The length of the given string must be 3 and above.
     //59. Write a JavaScript program to extract the first half of a string of even length.
     //60. Write a JavaScript program to create a new string without the first and last character of a given string.
-    //61. Write a JavaScript program to concatenate two strings except their first character. 
+    //61. Write a JavaScript program to concatenate two strings except their first character.
 
 
     </script>
