--- a/WebDev bootcamp/section 6 - intermediate CSS/tictactoe/tictactoe.html
+++ b/WebDev bootcamp/section 6 - intermediate CSS/tictactoe/tictactoe.html
@@ -11,19 +11,19 @@
 
     	<table>
     		<tr>
-    			<td id="1">X</td>
-    			<td id="2">X</td>
-    			<td id="3">X</td>
+    			<td></td>
+    			<td class="vertical"></td>
+    			<td></td>
     		</tr>
     		<tr>
-    			<td id="4">X</td>
-    			<td id="5">X</td>
-    			<td id="6">X</td>
+    			<td class="horizontal"></td>
+    			<td class="vertical horizontal"></td>
+    			<td class="horizontal"></td>
     		</tr>
     		<tr>
-    			<td id="7">X</td>
-    			<td id="8">X</td>
-    			<td id="9">X</td>
+    			<td></td>
+    			<td class="vertical"></td>
+    			<td></td>
     		</tr>
     	</table>
 
