--- a/W3 excercises/JS excercises 61-80/index1.html
+++ b/W3 excercises/JS excercises 61-80/index1.html
@@ -7,6 +7,58 @@
   <body>
     <script>
      //61. Write a JavaScript program to concatenate two strings except their first character.
+     console.log(concatTwo("Maciej", "Monika"));
+
+     function concatTwo(txt1, txt2){
+       if(txt1.length <= 2 || txt2.length <= 2){
+         return false;
+       } else {
+         return txt1.slice(1, txt1.length) + txt2.slice(1, txt2.length)
+       }
+     }
+
+     console.log("---------------------");
+     //62. Write a JavaScript program to move last three character to the start
+     //of a given string. The string length must be greater or equal to three.
+     console.log(move("Maciej"));
+     console.log(move("Ma"));
+
+     function move(text) {
+       if(text.length < 3) {
+         return false;
+       } else {
+         return text.slice(text.length - 3, text.length)
+                + text.slice(0, text.length - 3);
+       }
+     }
+
+
+     console.log("---------------------");
+     //63. Write a JavaScript program to create a string using the middle three
+     //characters of a given string of odd length. The string length must be greater or equal to three.
+     console.log(stringBuilder("Ma"));
+     console.log(stringBuilder("Mabb"));
+     console.log(stringBuilder("Maciiej"));
+     console.log(stringBuilder("aabbcddeeffggaa"));
+
+     function stringBuilder(text){
+       if (text.length <= 3) {
+         return false;
+       } else {
+         if (text.length % 2 == 0){
+           return false;
+         } else {
+           return  text.substr((text.length / 2) - 1, 3);
+         }
+       }
+     }
+
+     //64. Write a JavaScript program to concatenate two strings and return
+     //the result. If the length of the strings are not same then remove the characters from the longer string.
+
+
+     //65. Write a JavaScript program to test if a string end with "Script". The string length must be greater or equal to 6.
+
 
 
     </script>
