--- a/W3 excercises/JS excercises 61-80/index1.html
+++ b/W3 excercises/JS excercises 61-80/index1.html
@@ -126,16 +126,39 @@
        }
      }
 
+     console.log("67. ---------------------");
      //67. Write a JavaScript program to create a new string from a given string,
      //removing the first and last characters of the string if the first or last
      //character are 'P'. Return the original string if the condition is not satisfied.
+     console.log(noP("PythonP"));
+     console.log(noP("Python"));
+     console.log(noP("JavaScript"));
 
+     function noP(str) {
+       let start_pos = 0;
+       let end_pos = str.length;
+
+       if (str.length > 0 && str.charAt(0) == 'P'){
+         start_pos = 1;
+       }
+
+       if (str.length > 1 && str.charAt(str.length - 1) == 'P'){
+         end_pos--;
+       }
+
+       return str.substring(start_pos, end_pos);
+     }
+
+     console.log("68. ---------------------");
      //68. Write a JavaScript program to create a new string using the first and
      //last n characters from a given sting. The string length must be greater or equal to n.
 
+
+     console.log("69. ---------------------");
      //69. Write a JavaScript program to compute the sum of three elements of a given
      //array of integers of length 3.
 
+     console.log("70. ---------------------");
      //70. Write a JavaScript program to rotate the elements left of a given array of integers of length 3.
 
     </script>
