--- a/W3 excercises/JS excercises 61-80/index1.html
+++ b/W3 excercises/JS excercises 61-80/index1.html
@@ -152,6 +152,16 @@
      console.log("68. ---------------------");
      //68. Write a JavaScript program to create a new string using the first and
      //last n characters from a given sting. The string length must be greater or equal to n.
+     console.log(firstAndLast("abc", 5));
+     console.log(firstAndLast("tester", 3));
+
+     function firstAndLast(str, n){
+       if (str.length < n) {
+         return false;
+       } else {
+         return str.substr(0, 1) + str.substr(str.length - 1);
+       }
+     }
 
 
      console.log("69. ---------------------");
