--- a/W3 excercises/JS excercises 61-70/index1.html
+++ b/W3 excercises/JS excercises 61-70/index1.html
@@ -189,8 +189,13 @@
     //    return a + b;
     //  }
 
-     console.log("70. ---------------------");
-     //70. Write a JavaScript program to rotate the elements left of a given array of integers of length 3.
+    console.log("70. ---------------------");
+    //70. Write a JavaScript program to rotate the elements left of a given array of integers of length 3.
+    console.log(retArr([2, 5, 1]));
+
+    function retArr (arr){
+      return [arr[1], arr[2], arr[0]];
+    }
 
     </script>
   </body>
