--- a/W3 excercises/JS excercises 61-70/index1.html
+++ b/W3 excercises/JS excercises 61-70/index1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Excercises 61-80</title>
+    <title>Excercises 61-70</title>
   </head>
   <body>
     <script>
@@ -17,7 +17,7 @@
        }
      }
 
-     console.log("---------------------");
+     console.log("62. ---------------------");
      //62. Write a JavaScript program to move last three character to the start
      //of a given string. The string length must be greater or equal to three.
      console.log(move("Maciej"));
