--- a/W3 excercises/JS excercises 71-80/index1.html
+++ b/W3 excercises/JS excercises 71-80/index1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>excercises 71-80</title>
   </head>
   <body>
     <script>
@@ -29,8 +29,26 @@
         }
       }
 
+      console.log("72. ---------------------");
       //72. Write a JavaScript program to check if the first and last
       //elements are equal of a given array of integers length 3.
+      console.log(ifEqual([]));
+      console.log(ifEqual([3, 6, 8]));
+      console.log(ifEqual([1, 6, 8]));
+      console.log(ifEqual([1, 6, 1]));
+      console.log(ifEqual([8, 6, 1]));
+
+      function ifEqual (arr) {
+        if (arr.length < 3) {
+          return false;
+        } else {
+          if (arr[0] == arr[arr.length-1]) {
+            return [true, arr[0]];
+          } else {
+            return false;
+          }
+        }
+      }
 
       //73. Write a JavaScript program to reverse the elements of a given
       //array of integers length 3.
